# godot-mcp

./: .gitattributes  .gitignore  .mcp.json  LICENSE  README.md  install.ps1
addons/godot_mcp/: command_router.gd  command_router.gd.uid  game_capture.gd  game_capture.gd.uid  mcp_bridge.gd  mcp_bridge.gd.uid  plugin.cfg  poller.gd  poller.gd.uid
mcp-server/: pyproject.toml  serve-http.bat  server.py
